Update to CI files

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -26,4 +26,4 @@ jobs:
         gdcustom-key: {{gdcustom-key}}
       run:
         path: sh
-        args: ['ci/build.sh']
+        args: ['-c', 'cd amzn-drivers && ci/build.sh']
