--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
       inputs:
         - name: amzn-drivers
       params:
-        gdcustom-key: {{gdcustom-key}}
+        gdcustom_key: {{gdcustom_key}}
       run:
         path: sh
         args: ['-c', 'cd amzn-drivers && ci/build.sh']
