--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -29,3 +29,23 @@ jobs:
       run:
         path: sh
         args: ['-c', 'cd amzn-drivers && ci/build.sh']
+  - task: upload-yum
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: paas-docker-artifactory.gannettdigital.com/paas-centos7-base
+          tag: "latest"
+          insecure_registries: [ "paas-docker-artifactory.gannettdigital.com" ]
+      inputs:
+        - name: rpm-artifacts
+      params:
+        gdcustom_key: {{gdcustom_key}}
+      run:
+        path: sh
+        args:
+        - -exc
+        - |
+          ls -hal
+          ls -hal rom-artifacts
