--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -24,6 +24,9 @@ jobs:
         - name: amzn-drivers
       params:
         gdcustom_key: {{gdcustom_key}}
+        KERNEL_VERSION: {{KERNEL_VERSION}}
+        VERSION: {{VERSION}}
+        RELEASE: {{RELEASE}}
       run:
         path: sh
         args: ['-c', 'cd amzn-drivers && ci/build.sh']
