--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
       inputs:
         - name: amzn-drivers
       params:
-        GDCUSTOM_KEY: {{gdcustom_key}}
+        GDCUSTOM_KEY: {{GDCUSTOM_KEY}}
         KERNEL_VERSION: {{KERNEL_VERSION}}
         VERSION: {{VERSION}}
         RELEASE: {{RELEASE}}
